--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ development:
   reconnect: false
   database: ThomasHallJr_development
   pool: 5
-  username: ThomasHallJr
-  password:
+  username: root
+  password: yourpassword
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -27,8 +27,8 @@ test:
   reconnect: false
   database: ThomasHallJr_test
   pool: 5
-  username: ThomasHallJr
-  password:
+  username: root
+  password: yourpassword
   host: localhost
 
 production:
@@ -37,6 +37,6 @@ production:
   reconnect: false
   database: ThomasHallJr_production
   pool: 5
-  username: ThomasHallJr
-  password:
+  username: root
+  password: yourpassword
   host: localhost
