--- a/config/database.yml
+++ b/config/database.yml
@@ -32,6 +32,7 @@ test:
   host: localhost
 
 production:
+  url: <%= ENV['DATABASE_URL'] %>
   adapter: mysql2
   encoding: utf8
   reconnect: false
